# Black-Hole-Raytracer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
CGL/: Makefile
CGL/src/: Makefile
CGL184/: CMakeLists.txt  Makefile
CGL184/include/CGL/: CGL.h  color.h  complex.h  matrix3x3.h  matrix4x4.h  misc.h  osdtext.h  quaternion.h  renderer.h  spectrum.h  timer.h  vector2D.h  vector3D.h  vector4D.h  viewer.h
CGL184/include/GLFW/: glfw3.h
CGL184/src/: CMakeLists.txt  Makefile  color.cpp  complex.cpp  osdtext.cpp  quaternion.cpp  spectrum.cpp  vector2D.cpp  vector3D.cpp  vector4D.cpp  viewer.cpp
docs/: index.html
docs/css/: skeleton.css
src/: ArgbColor.cpp  ArgbColor.h  CMakeLists.txt  Makefile  Program.cpp  Scene.cpp  Scene.h  SchwarzschildBlackHoleEquation.h  SchwarzschildRayProcessor.cpp  SchwarzschildRayProcessor.h  ThreadParams.h  main.cpp  matrix4x4.cpp  matrix4x4.h  utils.cpp  utils.h  vector3D.cpp  vector3D.h  vector4D.cpp  vector4D.h
src/hitable/: Disk.cpp  Disk.h  Horizon.cpp  Horizon.h  IHitable.h  Sky.cpp  Sky.h  TexturedDisk.cpp  TexturedDisk.h
src/hitables/: Horizon.cpp  Horizon.h  Sky.cpp
src/mappings/: DiscMapping.cpp  DiscMapping.h  SphericalMapping.cpp  SphericalMapping.h
src/models/: Matrix4x4.cpp  Matrix4x4.h  Vector3D.cpp  Vector3D.h  Vector4D.cpp  Vector4D.h
